--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -12,3 +12,4 @@ payload:
   - DOMAIN-SUFFIX,ppt.cc
   - DOMAIN-SUFFIX,v2ex.com
   - DOMAIN-SUFFIX,bang-olufsen.com
+  - DOMAIN-SUFFIX,mastondon.art
