--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -16,4 +16,4 @@ payload:
   - DOMAIN-KEYWORD,pinterest
   - DOMAIN-SUFFIX,pinterest.ch
   - PROCESS-NAME,org.joinmastodon.android
-  - DOMAIN-SUFFIX,na01.safelinks.protection.outlook.com/
+  - DOMAIN-SUFFIX,na01.safelinks.protection.outlook.com
