--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -21,3 +21,4 @@ payload:
   - PROCESS-NAME,com.microsoft.bing
   - PROCESS-NAME,com.google.android.inputmethod.latin
   - DOMAIN-SUFFIX,faphouse.com
+  - DOMAIN-SUFFIX,coomer.party
