--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -22,3 +22,4 @@ payload:
   - PROCESS-NAME,com.google.android.inputmethod.latin
   - DOMAIN-SUFFIX,faphouse.com
   - DOMAIN-SUFFIX,coomer.party
+  - DOMAIN-SUFFIX,bsky.app
