--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -23,3 +23,4 @@ payload:
   - DOMAIN-SUFFIX,faphouse.com
   - DOMAIN-SUFFIX,coomer.party
   - DOMAIN-SUFFIX,bsky.app
+  - DOMAIN-SUFFIX,bundlednotes.com
