--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -24,3 +24,4 @@ payload:
   - DOMAIN-SUFFIX,coomer.party
   - DOMAIN-SUFFIX,bsky.app
   - DOMAIN-SUFFIX,bundlednotes.com
+  - DOMAIN-SUFFIX,duolingo.com
