--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -25,3 +25,4 @@ payload:
   - DOMAIN-SUFFIX,bsky.app
   - DOMAIN-SUFFIX,bundlednotes.com
   - DOMAIN-SUFFIX,duolingo.com
+  - DOMAIN-SUFFIX,yummy.best
