--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -27,3 +27,4 @@ payload:
   - DOMAIN-SUFFIX,bundlednotes.com
   - DOMAIN-SUFFIX,duolingo.com
   - DOMAIN-SUFFIX,yummy.best
+  - DOMAIN-SUFFIX,annas-archive.org
