--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -28,3 +28,4 @@ payload:
   - DOMAIN-SUFFIX,duolingo.com
   - DOMAIN-SUFFIX,yummy.best
   - DOMAIN-SUFFIX,annas-archive.org
+  - DOMAIN-SUFFIX,mygraphpaper.com
