--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -30,3 +30,4 @@ payload:
   - DOMAIN-SUFFIX,yummy.best
   - DOMAIN-SUFFIX,annas-archive.org
   - DOMAIN-SUFFIX,mygraphpaper.com
+  - DOMAIN-SUFFIX,afonsecailustrador.com
