--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -31,3 +31,4 @@ payload:
   - DOMAIN-SUFFIX,annas-archive.org
   - DOMAIN-SUFFIX,mygraphpaper.com
   - DOMAIN-SUFFIX,afonsecailustrador.com
+  - DOMAIN-SUFFIX,linktr.ee
