--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -32,3 +32,4 @@ payload:
   - DOMAIN-SUFFIX,mygraphpaper.com
   - DOMAIN-SUFFIX,afonsecailustrador.com
   - DOMAIN-SUFFIX,linktr.ee
+  - DOMAIN-SUFFIX,goodnotes.com
