--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -33,3 +33,4 @@ payload:
   - DOMAIN-SUFFIX,afonsecailustrador.com
   - DOMAIN-SUFFIX,linktr.ee
   - DOMAIN-SUFFIX,goodnotes.com
+  - DOMAIN-SUFFIX,bangumi.moe
