--- a/noproxy.yaml
+++ b/noproxy.yaml
@@ -15,3 +15,4 @@ payload:
   # 郵箱：Infomaniak
   - DOMAIN-SUFFIX,mail.infomaniak.com
   - DOMAIN-SUFFIX,eltngl.com
+  - DOMAIN-SUFFIX,canvas.kingston.ac.uk
