--- a/noproxy.yaml
+++ b/noproxy.yaml
@@ -16,3 +16,6 @@ payload:
   - DOMAIN-SUFFIX,mail.infomaniak.com
   - DOMAIN-SUFFIX,eltngl.com
   - DOMAIN-SUFFIX,canvas.kingston.ac.uk
+  - DOMAIN-SUFFIX,nikonimagespace.com
+  - DOMAIN-SUFFIX,nikonimglib.com
+  - DOMAIN-SUFFIX,nikon.com
