--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -34,3 +34,4 @@ payload:
   - DOMAIN-SUFFIX,linktr.ee
   - DOMAIN-SUFFIX,goodnotes.com
   - DOMAIN-SUFFIX,bangumi.moe
+  - DOMAIN-SUFFIX,shuzijumin.com
