--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -35,3 +35,4 @@ payload:
   - DOMAIN-SUFFIX,goodnotes.com
   - DOMAIN-SUFFIX,bangumi.moe
   - DOMAIN-SUFFIX,shuzijumin.com
+  - DOMAIN-SUFFIX,picacomic.com
