--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -36,3 +36,4 @@ payload:
   - DOMAIN-SUFFIX,bangumi.moe
   - DOMAIN-SUFFIX,shuzijumin.com
   - DOMAIN-SUFFIX,picacomic.com
+  - DOMAIN-SUFFIX,hitomi.la
