--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -37,3 +37,4 @@ payload:
   - DOMAIN-SUFFIX,shuzijumin.com
   - DOMAIN-SUFFIX,picacomic.com
   - DOMAIN-SUFFIX,hitomi.la
+  - DOMAIN-SUFFIX,onlyfans.com
