--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -38,3 +38,4 @@ payload:
   - DOMAIN-SUFFIX,picacomic.com
   - DOMAIN-SUFFIX,hitomi.la
   - DOMAIN-SUFFIX,onlyfans.com
+  - DOMAIN-SUFFIX,vivaldi.net
