--- a/UK_Proxy.yaml
+++ b/UK_Proxy.yaml
@@ -12,3 +12,5 @@ DOMAIN-SUFFIX,checkmyfile.com,🇬🇧 英國節點
 DOMAIN-SUFFIX, trading212.com
 DOMAIN-SUFFIX, appsflyersdk.com
 DOMAIN-KEYWORD, trading212
+
+DOMAIN-KEYWORD, moneysavingexpert.com
