--- a/UK_Proxy.yaml
+++ b/UK_Proxy.yaml
@@ -14,3 +14,4 @@ DOMAIN-SUFFIX, appsflyersdk.com
 DOMAIN-KEYWORD, trading212
 
 DOMAIN-KEYWORD, moneysavingexpert.com
+DOMAIN-KEYWORD, dealmoon.co.uk
