--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -39,3 +39,4 @@ payload:
   - DOMAIN-SUFFIX,hitomi.la
   - DOMAIN-SUFFIX,onlyfans.com
   - DOMAIN-SUFFIX,vivaldi.net
+  - DOMAIN-SUFFIX,wplace.live
