--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -40,3 +40,4 @@ payload:
   - DOMAIN-SUFFIX,onlyfans.com
   - DOMAIN-SUFFIX,vivaldi.net
   - DOMAIN-SUFFIX,wplace.live
+  - DOMAIN-SUFFIX,patreonusercontent.com
