--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -41,3 +41,4 @@ payload:
   - DOMAIN-SUFFIX,vivaldi.net
   - DOMAIN-SUFFIX,wplace.live
   - DOMAIN-SUFFIX,patreonusercontent.com
+  - DOMAIN-SUFFIX,myportfolio.com
