--- a/UK_Proxy.yaml
+++ b/UK_Proxy.yaml
@@ -15,3 +15,7 @@ DOMAIN-KEYWORD, trading212
 
 DOMAIN-KEYWORD, moneysavingexpert.com
 DOMAIN-KEYWORD, dealmoon.co.uk
+
+# 維也納應用藝術大學（可能只接受歐洲 IP 訪問）（
+DOMAIN-KEYWORD, dieangewandte.at
+DOMAIN-KEYWORD, uni-ak.ac.at
