--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -42,3 +42,4 @@ payload:
   - DOMAIN-SUFFIX,wplace.live
   - DOMAIN-SUFFIX,patreonusercontent.com
   - DOMAIN-SUFFIX,myportfolio.com
+  - DOMAIN-SUFFIX,imagedelivery.net
