--- a/UK_Proxy.yaml
+++ b/UK_Proxy.yaml
@@ -19,3 +19,6 @@ DOMAIN-KEYWORD, dealmoon.co.uk
 # 維也納應用藝術大學（可能只接受歐洲 IP 訪問）（
 DOMAIN-KEYWORD, dieangewandte.at
 DOMAIN-KEYWORD, uni-ak.ac.at
+
+# Revolut
+DOMAIN-KEYWORD, revolut.com
