--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -43,3 +43,4 @@ payload:
   - DOMAIN-SUFFIX,patreonusercontent.com
   - DOMAIN-SUFFIX,myportfolio.com
   - DOMAIN-SUFFIX,imagedelivery.net
+  - DOMAIN-SUFFIX,artisticdoctorateresources.com
