--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -44,3 +44,4 @@ payload:
   - DOMAIN-SUFFIX,myportfolio.com
   - DOMAIN-SUFFIX,imagedelivery.net
   - DOMAIN-SUFFIX,artisticdoctorateresources.com
+  - DOMAIN-SUFFIX,emojipedia.org
