--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -45,3 +45,4 @@ payload:
   - DOMAIN-SUFFIX,imagedelivery.net
   - DOMAIN-SUFFIX,artisticdoctorateresources.com
   - DOMAIN-SUFFIX,emojipedia.org
+  - DOMAIN-SUFFIX,researchgate.net
