--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -46,3 +46,4 @@ payload:
   - DOMAIN-SUFFIX,artisticdoctorateresources.com
   - DOMAIN-SUFFIX,emojipedia.org
   - DOMAIN-SUFFIX,researchgate.net
+  - DOMAIN-SUFFIX,bispublishers.com
