--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -47,3 +47,4 @@ payload:
   - DOMAIN-SUFFIX,emojipedia.org
   - DOMAIN-SUFFIX,researchgate.net
   - DOMAIN-SUFFIX,bispublishers.com
+  - DOMAIN-SUFFIX,y2f5yf.me
