--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -48,3 +48,4 @@ payload:
   - DOMAIN-SUFFIX,researchgate.net
   - DOMAIN-SUFFIX,bispublishers.com
   - DOMAIN-SUFFIX,y2f5yf.me
+  - DOMAIN-SUFFIX,unlockt.me
