--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -49,3 +49,4 @@ payload:
   - DOMAIN-SUFFIX,bispublishers.com
   - DOMAIN-SUFFIX,y2f5yf.me
   - DOMAIN-SUFFIX,unlockt.me
+  - DOMAIN-SUFFIX,aalto.fi
