--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -52,3 +52,4 @@ payload:
   - DOMAIN-SUFFIX,aalto.fi
   - DOMAIN-SUFFIX,firefox.com
   - DOMAIN-SUFFIX,manhuagui.com
+  - DOMAIN-SUFFIX,grokipedia.com
