--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -53,3 +53,5 @@ payload:
   - DOMAIN-SUFFIX,firefox.com
   - DOMAIN-SUFFIX,manhuagui.com
   - DOMAIN-SUFFIX,grokipedia.com
+  - DOMAIN-SUFFIX,podcasts.apple.com
+  - DOMAIN,amp-api.podcasts.apple.com
