--- a/doproxy.yaml
+++ b/doproxy.yaml
@@ -55,3 +55,5 @@ payload:
   - DOMAIN-SUFFIX,grokipedia.com
   - DOMAIN-SUFFIX,podcasts.apple.com
   - DOMAIN,amp-api.podcasts.apple.com
+  - DOMAIN-SUFFIX,mastodon.art
+  - DOMAIN-KEYWORD,mastodon
