--- a/noproxy.yaml
+++ b/noproxy.yaml
@@ -1,16 +1,14 @@
-payload:
-  # 強制直連列表
+# 強制直連列表
 
-  - DOMAIN-SUFFIX,pop.gmail.com
-  - DOMAIN-SUFFIX,imap.gmail.com
-  - DOMAIN-SUFFIX,smtp.gmail.com
-  - DOMAIN-SUFFIX,outlook.office365.com
-  - DOMAIN-SUFFIX,smtp.office365.com
-  - DOMAIN-SUFFIX,imap-mail.outlook.com
-  - DOMAIN-SUFFIX,smtp-mail.outlook.com
-  - DOMAIN-SUFFIX,mail.infomaniak.com
-  - DOMAIN-SUFFIX,eltngl.com
-  - DOMAIN-SUFFIX,canvas.kingston.ac.uk
-  - DOMAIN-SUFFIX,nikonimagespace.com
-  - DOMAIN-SUFFIX,nikonimglib.com
-  - DOMAIN-SUFFIX,nikon.com
+DOMAIN-SUFFIX,pop.gmail.com
+DOMAIN-SUFFIX,imap.gmail.com
+DOMAIN-SUFFIX,smtp.gmail.com
+DOMAIN-SUFFIX,outlook.office365.com
+DOMAIN-SUFFIX,smtp.office365.com
+DOMAIN-SUFFIX,imap-mail.outlook.com
+DOMAIN-SUFFIX,smtp-mail.outlook.com
+DOMAIN-SUFFIX,eltngl.com
+DOMAIN-SUFFIX,canvas.kingston.ac.uk
+DOMAIN-SUFFIX,nikonimagespace.com
+DOMAIN-SUFFIX,nikonimglib.com
+DOMAIN-SUFFIX,nikon.com
