--- a/noproxy.yaml
+++ b/noproxy.yaml
@@ -1,5 +1,13 @@
 # 強制直連列表
-
+# > 本地
+ip-cidr,10.0.0.0/8
+ip-cidr,127.0.0.0/8
+ip-cidr,172.16.0.0/12
+ip-cidr,192.168.0.0/16
+ip-cidr,224.0.0.0/24
+ip-cidr,182.254.116.0/24
+# > 郵件相關
+user-agent,mail
 DOMAIN-SUFFIX,pop.gmail.com
 DOMAIN-SUFFIX,imap.gmail.com
 DOMAIN-SUFFIX,smtp.gmail.com
