--- a/UK_Proxy.yaml
+++ b/UK_Proxy.yaml
@@ -1,11 +1,11 @@
 # loqbox
 DOMAIN-SUFFIX,loqbox.com
 # 英國信用分查詢（自動連接）
-DOMAIN-SUFFIX,creditkarma.co.uk
-DOMAIN-SUFFIX,totallymoney.uk
-DOMAIN-SUFFIX,totallymoney.com
-DOMAIN-SUFFIX,clearscore.com
-DOMAIN-SUFFIX,checkmyfile.com
+DOMAIN-SUFFIX, creditkarma.co.uk
+DOMAIN-SUFFIX, totallymoney.uk
+DOMAIN-SUFFIX, totallymoney.com
+DOMAIN-SUFFIX, clearscore.com
+DOMAIN-SUFFIX, checkmyfile.com
 # Trading 212
 DOMAIN-SUFFIX, trading212.com
 DOMAIN-SUFFIX, appsflyersdk.com
@@ -13,9 +13,10 @@ DOMAIN-KEYWORD, trading212
 # 其他英國網站
 DOMAIN-KEYWORD, moneysavingexpert.com
 DOMAIN-KEYWORD, dealmoon.co.uk
-# 維也納應用藝術大學（可能只接受歐洲 IP 訪問）
+# 大學官網
 DOMAIN-KEYWORD, dieangewandte.at
 DOMAIN-KEYWORD, uni-ak.ac.at
+DOMAIN-SUFFIX, aalto.fi
 # Revolut
 DOMAIN-SUFFIX, revolut.com
 DOMAIN-KEYWORD, revolut
